--- a/views/partials/index.ejs
+++ b/views/partials/index.ejs
@@ -30,12 +30,10 @@
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                        <strong>This is the first item's accordion body.</strong> <br>
+                        <em>EDI Configuration Analyst | June 2021 - Present</em>
+                        <p>...</p>
+                        <!-- TODO : link to work frag on resume page -->
                     </div>
                 </div>
             </div>
@@ -51,6 +49,7 @@
                         <strong>Western Governors University</strong><br>
                         <em>B.S. Computer Science | November 2024 - Present</em>
                         <p>Studying Computer Science with a graduation target of mid-2025.</p>
+                        <!-- TODO : add link to edu frag on resume  -->
                     </div>
                 </div>
             </div>
@@ -68,6 +67,7 @@
                             <li>OOP Programming/Java</li>
                             <li>Relator/Empathetic</li>
                         </ul>
+                        <!-- TODO : add link to skill frag on resume  -->
                     </div>
                 </div>
             </div>
